--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,32 +13,35 @@ html {
 header {
   background: rgb(3, 248, 187);
   position: relative;
-  top: -25px;
   padding: 20px;
-  padding-bottom: 2px;
   text-align: center;
+  margin-bottom: 60px;
 }
 
 input {
   background: rgb(58, 235, 58);
   box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.11);
   border: 1px solid lightgreen;
-  font-size: 30px;
+  font-size: 15px;
   width: 70%;
-  margin: 0 auto;
+  margin: 10px auto;
   border-radius: 2px;
   outline: none;
   padding: 5px;
 }
 
 button {
-  background: rgba(58, 235, 58, 0.473);
+  background: rgba(58, 235, 58, 0.873);
   box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.11);
   border: 1px solid black;
   font-size: 30px;
   border-radius: 2px;
   cursor: pointer;
   outline: none;
+  margin-bottom: 30px;
+}
+p{
+  font-size: 20px;
 }
 
 div.container {
@@ -54,3 +57,253 @@ div.in-and-out {
   border-radius: 5px;
   height: 500px;
 }
+div.hidden * {
+  opacity: 0;
+}
+
+/*  ========= spinner by casper pascal on codepen ======= */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+div.wrap {
+  margin: 0 auto;
+  position: relative;
+  left: 40%;
+  top: 10%;
+}
+
+section {
+  display: block;
+  position: relative;
+}
+
+ul.rotate_wrapper {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  list-style: none;
+}
+
+ul.rotate_wrapper li.rotate_item {
+  width: 100%;
+  height: 100%;
+  border-radius: 52px;
+  -webkit-border-radius: 52px;
+  -moz-border-radius: 52px;
+  -o-border-radius: 52px;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  text-indent: -9999px;
+  display: block;
+  position: absolute;
+  border: none;
+}
+
+ul.rotate_wrapper li.rotate_item span {
+  background: rgb(10, 108, 221);
+  bottom: 0px;
+  left: 50%;
+  margin-left: -2px;
+  display: block;
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -o-border-radius: 2px;
+}
+
+/* CSS3 Animations */
+
+ul.rotate_wrapper li.rotate_item {
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-name: orbit;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-name: orbit;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+  -moz-animation-name: orbit;
+  -o-animation-iteration-count: infinite;
+  -o-animation-timing-function: linear;
+  -o-animation-name: orbit;
+}
+
+ul.rotate_wrapper li.rotate_item {
+  animation-duration: 4s;
+  -webkit-animation-duration: 4s;
+  -moz-animation-duration: 4s;
+  -o-animation-duration: 4s;
+}
+
+.delay1 {
+  animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  /* Firefox */
+  -webkit-animation-delay: 0.2s;
+  /* Safari and Chrome */
+  -o-animation-delay: 0.2s;
+  /* Opera */
+}
+
+.delay2 {
+  animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  /* Firefox */
+  -webkit-animation-delay: 0.4s;
+  /* Safari and Chrome */
+  -o-animation-delay: 0.4s;
+  /* Opera */
+}
+
+.delay3 {
+  animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  /* Firefox */
+  -webkit-animation-delay: 0.6s;
+  /* Safari and Chrome */
+  -o-animation-delay: 0.6s;
+  /* Opera */
+}
+
+.delay4 {
+  animation-delay: 0.8s;
+  -moz-animation-delay: 0.8s;
+  /* Firefox */
+  -webkit-animation-delay: 0.8s;
+  /* Safari and Chrome */
+  -o-animation-delay: 0.8s;
+  /* Opera */
+}
+
+@keyframes orbit {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  5% {
+    transform: rotate(90deg);
+    opacity: 1;
+  }
+  45% {
+    transform: rotate(270deg);
+    opacity: 1;
+  }
+  55% {
+    transform: rotate(540deg);
+    opacity: 1;
+  }
+  75% {
+    transform: rotate(630deg);
+    opacity: 1;
+  }
+  80% {
+    transform: rotate(720deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(720deg);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes orbit {
+  0% {
+    -webkit-transform: rotate(0deg);
+    opacity: 1;
+  }
+  5% {
+    -webkit-transform: rotate(90deg);
+    opacity: 1;
+  }
+  45% {
+    -webkit-transform: rotate(270deg);
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: rotate(540deg);
+    opacity: 1;
+  }
+  75% {
+    -webkit-transform: rotate(630deg);
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: rotate(720deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(720deg);
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes orbit {
+  0% {
+    -moz-transform: rotate(0deg);
+    opacity: 1;
+  }
+  5% {
+    -moz-transform: rotate(90deg);
+    opacity: 1;
+  }
+  45% {
+    -moz-transform: rotate(270deg);
+    opacity: 1;
+  }
+  55% {
+    -moz-transform: rotate(540deg);
+    opacity: 1;
+  }
+  75% {
+    -moz-transform: rotate(630deg);
+    opacity: 1;
+  }
+  80% {
+    -moz-transform: rotate(720deg);
+    opacity: 0;
+  }
+  100% {
+    -moz-transform: rotate(720deg);
+    opacity: 0;
+  }
+}
+
+@-o-keyframes orbit {
+  0% {
+    -o-transform: rotate(0deg);
+    opacity: 1;
+  }
+  5% {
+    -o-transform: rotate(90deg);
+    opacity: 1;
+  }
+  45% {
+    -o-transform: rotate(270deg);
+    opacity: 1;
+  }
+  55% {
+    -o-transform: rotate(540deg);
+    opacity: 1;
+  }
+  75% {
+    -o-transform: rotate(630deg);
+    opacity: 1;
+  }
+  80% {
+    -o-transform: rotate(720deg);
+    opacity: 0;
+  }
+  100% {
+    -o-transform: rotate(720deg);
+    opacity: 0;
+  }
+}
+
+/* ul.rotate_wrapper:hover li {-webkit-animation-play-state: paused;} */
+
